[package]
name = "claude_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo     = "0.33"
walkdir     = "2.5"
ignore      = "0.4"
anyhow      = "1"
chrono      = "0.4"
ratatui     = "0.29"
crossterm   = "0.28"
serde_json  = "1"
serde_yml   = "0.0.12"
toml        = "0.8"
serde       = { version = "1", features = ["derive"] }
sha2        = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
